--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h6{
     width: 210px;
     height: 210px;
     margin-top: 5px;
-    border: 1.5px solid black;
+    border: 1.5px solid rgba(12, 12, 12, 0.842);
 }
 .padding{
     padding-top: 70px;
